--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ color: #fff;
 
 
 .page-container {
-max-width: 500px;
-margin: 0 auto;
-padding: 30px 20px 80px;
+  max-width: 1200px;   /* större bredd på desktop */
+  margin: 0 auto;
+  padding: 10px 10px;  /* lite mer luftig */
 }
 
 
@@ -58,9 +58,10 @@ color: #aaa;
 
 
 .entry {
-display: grid;
-grid-template-columns: 1fr 1fr;
-gap: 40px;
+  display: grid;
+  grid-template-columns: 1.4fr 1fr;  /* video lite större */
+  gap: 20px;
+  margin-top: 40px;
 }
 
 
